# GemuProject

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  suppressed_leaks
dependencies/dear_bindings/include/: dcimgui.h  dcimgui_impl_sdl3.h  dcimgui_impl_sdlrenderer3.h  dcimgui_internal.h
dependencies/dear_imgui/include/: imgui.h  imgui_internal.h  imstb_textedit.h
dependencies/dear_imgui/src/: imgui_draw.cpp
dependencies/imgui/include/: imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.h  imstb_truetype.h
dependencies/imgui/src/: imgui_demo.cpp
include/: apu.h  control.h  cpu.h  disassembler.h  emulation.h  interrupts.h  logic.h  memory.h  ppu.h  ppu_utils.h  prefix.h  rendering.h  ring_buffer.h  save.h  utils.h
include/core/: apu.h  common.h  cpu.h  display.h  emulation.h  gb_core.h  interrupts.h  logger.h  ppu.h  ppu_utils.h  ring_buffer.h  rotshift.h  save.h  serial.h  serialization.h  sync.h  timers.h  utils.h
include/core/mbc/: mbc1.h  mbc2.h  mbc3.h  mbc5.h  mbc_base.h  no_mbc.h
include/core/memory/: memory.h  read.h  write.h
include/core/opcodes/: load.h
include/front/sdl/: audio.h  events.h  rendering.h  sdl_utils.h  ui.h
include/mbc/: mbc3.h  mbc_base.h  no_mbc.h
include/memory/: read.h
include/opcodes/: jump.h
src/: CMakeLists.txt  apu.c  cpu.c  emulation.c  main.c  ppu.c  ppu_utils.c  rendering.c  sync.c
src/core/: CMakeLists.txt  apu.c  control.c  cpu.c  disassembler.c  display.c  emulation.c  gb_core.c  interrupts.c  jump.c  logger.c  logic.c  memory.c  ppu.c  ppu_utils.c  prefix.c  save.c  serial.c  serialization.c  sync.c  timers.c
src/core/mbc/: mbc1.c  mbc2.c  mbc3.c  mbc5.c  mbc_base.c  no_mbc.c
src/core/memory/: memory.c  read.c  write.c
src/core/opcodes/: control.c  jump.c  load.c  logic.c  prefix.c  rotshift.c
src/front/sdl/: CMakeLists.txt  audio.c  events.c  main.c  rendering.c  ui.c
